# terrain-change-detection-pc

./: .gitignore  BENCHMARK_RESULTS.md  CHANGELOG.md  COMMIT_MESSAGE.txt  MERGE_STRATEGY.md  ORGANIZATION_SUMMARY.md  PROJECT_STATUS.md  README.md  activate_gpu.sh  benchmark_results.json  debug_gpu_slowdown.py  main.py  pyproject.toml  pytest.ini
config/: default.yaml  default_clipped.yaml
config/profiles/: bench_c2c_par.yaml  bench_c2c_seq.yaml  bench_dod_par.yaml  bench_dod_seq.yaml  bench_m3c2_par.yaml  bench_m3c2_seq.yaml  drone.yaml  large_scale.yaml  large_synthetic.yaml  large_synthetic_clipped.yaml  synthetic.yaml
data/raw/: CloudCompare_M3C2_Histogram.csv  river_polygon_25833.geojson
data/raw/eksport_1225654_20250602/2015/metadata/: NDH Akershus 2pkt 2015_Flystripe.sos  NDH Akershus 2pkt 2015_Flystriper.dbf  NDH Akershus 2pkt 2015_Flystriper.shp  NDH Akershus 2pkt 2015_Flystriper.shx  NDH Akershus 2pkt 2015_Klippefil.dbf  NDH Akershus 2pkt 2015_Klippefil.shp  (+13 more)
docs/: ALGORITHMS.md  AREA_CLIPPING_GUIDE.md  BUGFIX_LASPY_API.md  CHANGELOG.md  CONFIGURATION_GUIDE.md  DRONE_DATA_SUPPORT.md  GPU_ACCELERATION_PLAN.md  GPU_CUDA_TOOLKIT_REQUIRED.md  GPU_INTEGRATION_STRATEGY.md  GPU_PERFORMANCE_ANALYSIS.md  GPU_PERFORMANCE_COMPARISON.md  GPU_SETUP_GUIDE.md  KNOWN_ISSUES.md  PARALLELIZATION_PLAN.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PHASE2_WEEK1_SUMMARY.md  ROADMAP.md  WSL2_GPU_SETUP_SUMMARY.md
docs/archive/: GPU_IMPLEMENTATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  REVISED_PLAN.md  ROADMAP.md
exploration/: CLOUDCOMPARE_WORKFLOWS.md  cloudcompare_cli_pipeline.bat  cloudcompare_cli_pipeline.py  cloudcompare_cli_simple.bat  cloudcompare_python_plugin_pipeline.py  explore.py  fast_explore.py
logs/: cores.npy
notebooks/: explore.py
scripts/: compare_cpu_gpu_dod.py  compare_m3c2_histograms.py  debug_cuml_large_c2c_issue.py  explore_data.py  generate_large_synthetic_laz.py  generate_synthetic_laz.py  run_benchmark.ps1  run_workflow.py  test_gpu_c2c_performance.py  test_gpu_dod_performance.py  test_icp_alignment_performance.py  test_tiled_dod.py
src/terrain_change_detection/: __init__.py
src/terrain_change_detection/acceleration/: __init__.py  gpu_array_ops.py  gpu_neighbors.py  hardware_detection.py  jit_kernels.py  parallel_executor.py  tile_workers.py  tiling.py
src/terrain_change_detection/alignment/: __init__.py  coarse_registration.py  fine_registration.py  streaming_alignment.py
src/terrain_change_detection/detection/: __init__.py  c2c.py  change_detection.py  dod.py  m3c2.py
src/terrain_change_detection/pipeline/: tiling.py
src/terrain_change_detection/preprocessing/: __init__.py  clipping.py  data_discovery.py  loader.py
src/terrain_change_detection/utils/: __init__.py  config.py  coordinate_transform.py  export.py  logging.py  point_cloud_filters.py
src/terrain_change_detection/visualization/: __init__.py  point_cloud.py
tests/: test_change_detection.py  test_clipping.py  test_coarse_registration.py  test_config_coarse_alignment.py  test_config_integration.py  test_coordinate_transform.py  test_data_discovery.py  test_drone_data_support.py  test_export.py  test_gpu_array_ops.py  test_gpu_c2c_integration.py  test_gpu_detection.py  test_gpu_dod.py  test_gpu_neighbors.py  test_icp_registration.py  test_jit_kernels.py  test_loader.py  test_outofcore_dod.py  test_parallel_executor.py  test_point_cloud_filters.py  test_streaming_integration.py
tests/test_preprocessing/: test_loader.py
(+20 files in other folders)
