[project]
name = "terrain-change-detection-pc"
version = "0.1.0"
description = "Terrain change detection based on multi-temporal point clouds"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "laspy>=2.5.4",
    "lazrs>=0.6.3",
    "plotly>=6.2.0",
    "py4dgeo>=0.7.0",
    "pyside6>=6.9.1",
    "pyvista>=0.46.0",
    "pyvistaqt>=0.11.3",
    "scikit-learn>=1.4.0",
    "pydantic>=2.7.0",
    "PyYAML>=6.0.1",
    "pytest>=7.4",
]

[project.optional-dependencies]
# Optional accelerators/backends
# Note: Open3D does not provide cp313 wheels yet; restrict to <3.13
open3d = ["open3d>=0.18.0; python_version < '3.13'"]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
